# kgamma

./: .kde-ci.yml  CMakeLists.txt  README.md
kcmkgamma/: displaynumber.cpp  kcm_kgamma.json  kgamma.cpp  kgamma.desktop
po/ar/: kcmkgamma.po
po/ast/: kcmkgamma.po
po/az/: kcmkgamma.po
po/be/: kcmkgamma.po
po/bg/: kcmkgamma.po
po/br/: kcmkgamma.po
po/bs/: kcmkgamma.po
po/ca/: kcmkgamma.po
po/ca@valencia/: kcmkgamma.po
po/cs/: kcmkgamma.po
po/cy/: kcmkgamma.po
po/da/: kcmkgamma.po
po/de/: kcmkgamma.po
po/el/: kcmkgamma.po
po/en_GB/: kcmkgamma.po
po/eo/: kcmkgamma.po
po/es/: kcmkgamma.po
po/et/: kcmkgamma.po
po/eu/: kcmkgamma.po
po/fa/: kcmkgamma.po
po/fi/: kcmkgamma.po
po/fr/: kcmkgamma.po
po/fy/: kcmkgamma.po
po/ga/: kcmkgamma.po
po/gl/: kcmkgamma.po
po/he/: kcmkgamma.po
po/hi/: kcmkgamma.po
po/hne/: kcmkgamma.po
po/hr/: kcmkgamma.po
po/hu/: kcmkgamma.po
po/ia/: kcmkgamma.po
po/id/: kcmkgamma.po
po/is/: kcmkgamma.po
po/it/: kcmkgamma.po
po/ja/: kcmkgamma.po
po/ka/: kcmkgamma.po
po/kk/: kcmkgamma.po
po/km/: kcmkgamma.po
po/ko/: kcmkgamma.po
po/lt/: kcmkgamma.po
po/lv/: kcmkgamma.po
po/mk/: kcmkgamma.po
po/ml/: kcmkgamma.po
po/mr/: kcmkgamma.po
po/ms/: kcmkgamma.po
po/nb/: kcmkgamma.po
po/nds/: kcmkgamma.po
po/ne/: kcmkgamma.po
po/nl/: kcmkgamma.po
po/nn/: kcmkgamma.po
po/oc/: kcmkgamma.po
po/pa/: kcmkgamma.po
po/pl/: kcmkgamma.po
po/pt/: kcmkgamma.po
po/pt_BR/: kcmkgamma.po
po/ro/: kcmkgamma.po
po/ru/: kcmkgamma.po
po/sa/: kcmkgamma.po
po/se/: kcmkgamma.po
po/si/: kcmkgamma.po
po/sk/: kcmkgamma.po
po/sl/: kcmkgamma.po
po/sq/: kcmkgamma.po
po/sr/: kcmkgamma.po
po/sr@ijekavian/: kcmkgamma.po
po/sr@ijekavianlatin/: kcmkgamma.po
po/sr@latin/: kcmkgamma.po
po/sv/: kcmkgamma.po
po/ta/: kcmkgamma.po
po/tg/: kcmkgamma.po
(+14 files in other folders)
